sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:13: error: not found: value x
        x+=1
        ^AlgCombSort:19: error: not found: value x
    x=0
    ^